# ethan-ws

./: .gitignore  Cargo.toml  README.md  checklist.md  deal.py  serve.py
info/: log-on.sh  portfolio.txt  renew.sh
pusoy/src/: api.rs  hx.rs  lib.rs
pusoy/src/game/: cards.rs  mod.rs  plays.rs
records/: Cargo.toml
records/src/: lib.rs
reference/: convert.py  stuff.txt
src/: api.rs  htmx.rs  hx.rs  json_seq.rs  json_stream.rs  lib.rs  main.rs  records.rs  word.rs
src/game/: bot.rs  cards.rs  mod.rs  plays.rs  state.rs
src/pusoy/: api.rs  html.rs  mod.rs  state.rs
static/: index.css  index.html
static/applab/: compat.css  compat.js  index.html
static/applab/3d/: index.css  index.html  index.js
static/applab/bounce/: index.css  index.html  index.js
static/applab/chess/: index.css  index.html  index.js
static/applab/cool/: index.css  index.html  index.js
static/applab/minesweeper/: index.css  index.html  index.js
static/applab/ramming/: code.js  index.html
static/applab/ramming/boat_terrain/: Cargo.toml  collision_map.txt
static/applab/ramming/boat_terrain/src/: main.rs
static/applab/ramming/terrain/: code.js  map0.txt  map1.txt
static/applab/ramming/terrain/backups/: Untitled Document  document 2  square grid stuff 3  square grid stuff 5  square grid stuff 6  stuff 4  terrain check not the whole program 1
static/applab/typing/: code.js
static/assets/: ethan.vcf
static/assets/resume/: index.css  index.html
static/pusoy/: index.css  index.html
static/word/: dictionary.json  index.css  index.html  index.js  words.txt
www/: card-background.css  index.css  index.html  index.js  not_found.html
