[package]
name = "pusoy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["ws", "macros", "headers"] } 
axum-core = "0.3.4"
axum-extra = { version = "0.7.7", features = ["cookie"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
base64 = "0.21.2"
bytes = "1.4.0"
cookie = { version = "0.17.0", features = ["percent-encode"] }
futures = "0.3.28"
futures-util = "0.3.28"
headers = "0.3.8"
html-node = { version = "0.2.1", features = ["axum"] }
http = "0.2.9"
http-body = "0.4.5"
hyper = { version = "0.14.27", features = ["full"] }
mime = "0.3.17"
pin-project = "1.1.3"
rand = "0.8.5"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde_urlencoded = "0.7.1"
serde_with = "3.3.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.1"
uuid = { version = "1.4.1", features = ["serde"] }
