[package]
name = "pusoy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.75"
axum = { version = "0.7.2", features = ["ws", "macros"] } 
axum-core = "0.4.1"
axum-extra = { version = "0.9.0", features = ["cookie", "typed-header"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
base64 = "0.21.5"
bytes = "1.5.0"
cookie = { version = "0.18.0", features = ["percent-encode"] }
futures = "0.3.30"
futures-util = "0.3.30"
headers = "0.4.0"
html-escape = "0.2.13"
http = "1.0.0"
http-body = "1.0.0"
hyper = { version = "1.1.0", features = ["full"] }
mime = "0.3.17"
pin-project = "1.1.3"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_urlencoded = "0.7.1"
serde_with = "3.4.0"
tinytemplate = "1.2.1"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.5.0"
uuid = { version = "1.6.1", features = ["serde"] }
