[package]
name = "ethan-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.75"
axum = { version = "0.7.5", features = ["ws", "macros"] } 
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
base64 = "0.21.5"
bytes = "1.5.0"
cookie = { version = "0.18.0", features = ["percent-encode"] }
futures = "0.3.30"
futures-util = "0.3.30"
headers = "0.4.0"
html-escape = "0.2.13"
http = "1.1.0"
http-body = "1.0.0"
hyper = { version = "1.3.1", features = ["full"] }
mime = "0.3.17"
pin-project = "1.1.5"
rand = "0.8.5"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_urlencoded = "0.7.1"
serde_with = "3.8.1"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tower-http = { version = "0.5.2", features = ["full"] }
url = "2.5.0"
uuid = { version = "1.7.0", features = ["serde"] }
once_cell = "1.19.0"
time = "0.3.36"
arc-swap = { version = "1.7.1", features = ["serde"] }

